[project]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Julien Chaumont"]
requires-python = ">=3.13"

dependencies = [
    "appdirs~=1.4.4",
    "beautifulsoup4~=4.12.2",
    "click~=8.1.7",
    "httpx~=0.27.2"
]

[project.optional-dependencies]
tests = [
    "pytest~=8.3.3",
    "pytest-benchmark~=5.1.0",
    "pytest-xdist~=3.6.1",
    "pyright~=1.1.337"
]

[tool.pyright]
reportIncompatibleMethodOverride = false

[tool.ruff.lint]
extend-select = ["I"]
